EZP-21213: Fixed Images/LegacyPathGeneratorTest

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtypes.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtypes.yml
@@ -409,8 +409,9 @@ services:
     ezpublish.fieldType.ezimage.pathGenerator:
         class: %ezpublish.fieldType.ezimage.pathGenerator.class%
         arguments:
-            - %ezsettings.default.image.published_images_dir%
+            # @todo Either pick from ConfigResolver, or use non siteaccess aware settings
             - %ezsettings.default.image.versioned_images_dir%
+            - %ezsettings.default.image.published_images_dir%
 
     ezpublish.fieldType.ezimage.externalStorage:
         class: %ezpublish.fieldType.ezimage.externalStorage.class%
