--- a/eZ/Publish/Core/settings/service.ini
+++ b/eZ/Publish/Core/settings/service.ini
@@ -18,7 +18,8 @@ legacy_dsn=sqlite://:memory:
 # general storage dir
 storage_dir=var/ezdemo_site/storage
 # Storage prefix for image field type
-image_storage_prefix=images
+image_published_prefix=images
+image_draft_prefix=images-versioned
 # Storage prefix for binary and media files
 binaryfile_storage_prefix=binary
 # Ignored files when cleaning up $storage_dir after FieldType\FileBaseIntegrationTest
@@ -346,7 +347,8 @@ arguments[settings][prefix]=$image_storage_prefix
 
 [ezimage:path_generator]
 class=eZ\Publish\Core\FieldType\Image\PathGenerator\LegacyPathGenerator
-
+arguments[draftPrefix]=$image_draft_prefix
+arguments[publishedPrefix]=$image_published_prefix
 # END: ezimage
 
 [ezxmltext:field_storage]
