EZP-21213: trying to make Travis happier

--- a/eZ/Publish/Core/settings/service.ini
+++ b/eZ/Publish/Core/settings/service.ini
@@ -20,6 +20,7 @@ storage_dir=var/ezdemo_site/storage
 # Storage prefix for image field type
 image_published_prefix=images
 image_draft_prefix=images-versioned
+image_storage_prefix=
 # Storage prefix for binary and media files
 binaryfile_storage_prefix=binary
 # Ignored files when cleaning up $storage_dir after FieldType\FileBaseIntegrationTest
